--- a/hammers/emacs/macros.org
+++ b/hammers/emacs/macros.org
@@ -12,13 +12,13 @@
 
 
 *** 所有数字加1
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (expand-file-name "lisp/init-macros.el" m/conf.d) :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-macros.el") :comments link
       (fset 'plus1
 	 [?\C-a ?\C-  ?\C-e ?\C-\M-% ?\[ ?0 ?- ?9 ?\C-e ?+ return ?\\ ?, ?\( ?1 ?+ ?  ?# ?& left left ?\\ ?\C-e return ?! ?\C-a])
     #+END_SRC
 
 *** provides
-    #+BEGIN_SRC elisp :eval never :exports code  :tangle (expand-file-name "lisp/init-macros.el" m/conf.d) :comments link
+    #+BEGIN_SRC elisp :eval never :exports code  :tangle (m/resolve "${m/conf.d}/lisp/init-macros.el") :comments link
       (provide 'init-macros)
     #+END_SRC
 
