--- a/hammers/emacs/snippets/orgmode.org
+++ b/hammers/emacs/snippets/orgmode.org
@@ -10,7 +10,7 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 *** 通用代码段
-    #+BEGIN_SRC text :tangle (expand-file-name "snippets/org-mode/src" m/conf.d) :mkdirp yes :eval never :exports code
+    #+BEGIN_SRC text :tangle (m/resolve "${m/conf.d}/snippets/org-mode/src") :mkdirp yes :eval never :exports code
       # -*- mode: snippet -*-
       # name: 
       # key: <s
@@ -21,7 +21,7 @@
     #+END_SRC
 *** shell 代码段
 
-    #+BEGIN_SRC text :tangle (expand-file-name "snippets/org-mode/shell" m/conf.d) :mkdirp yes :eval never :exports code
+    #+BEGIN_SRC text :tangle (m/resolve "${m/conf.d}/snippets/org-mode/shell") :mkdirp yes :eval never :exports code
       # -*- mode: snippet -*-
       # name: shell
       # key: <sh
@@ -33,7 +33,7 @@
 
 *** elisp 代码段
 
-    #+BEGIN_SRC text :tangle (expand-file-name "snippets/org-mode/elisp" m/conf.d) :mkdirp yes
+    #+BEGIN_SRC text :tangle (m/resolve "${m/conf.d}/snippets/org-mode/elisp") :mkdirp yes
       # -*- mode: snippet -*-
       # name: lisp
       # key: <elisp
@@ -44,7 +44,7 @@
     #+END_SRC
 
 *** conf 代码段
-    #+BEGIN_SRC text :tangle (expand-file-name "snippets/org-mode/conf" m/conf.d) :mkdirp yes
+    #+BEGIN_SRC text :tangle (m/resolve "${m/conf.d}/snippets/org-mode/conf") :mkdirp yes
       # -*- mode: snippet -*-
       # name: conf
       # key: <conf
@@ -55,7 +55,7 @@
     #+END_SRC
 
 *** graphviz 代码段
-    #+BEGIN_SRC text :tangle (expand-file-name "snippets/org-mode/dot" m/conf.d) :mkdirp yes
+    #+BEGIN_SRC text :tangle (m/resolve "${m/conf.d}/snippets/org-mode/dot") :mkdirp yes
       # -*- mode: snippet -*-
       # name: dot
       # key: <dot
@@ -70,7 +70,7 @@
 
 *** blog front matter 配置
 
-    #+BEGIN_SRC text :tangle (expand-file-name "snippets/org-mode/front-matter" m/conf.d) :mkdirp yes
+    #+BEGIN_SRC text :tangle (m/resolve "${m/conf.d}/snippets/org-mode/front-matter") :mkdirp yes
       # -*- mode: snippet -*-
       # name: front-mater
       # key: <front
@@ -98,7 +98,7 @@
     #+END_SRC
     
 *** verilog 代码段
-    #+BEGIN_SRC text :tangle (expand-file-name "snippets/org-mode/verilog" m/conf.d) :mkdirp yes
+    #+BEGIN_SRC text :tangle (m/resolve "${m/conf.d}/snippets/org-mode/verilog") :mkdirp yes
       # -*- mode: snippet -*-
       # name: verilog
       # key: <veri
