--- a/hammers/emacs/chinese.org
+++ b/hammers/emacs/chinese.org
@@ -91,7 +91,7 @@
 ** rime 输入法配置
 
 *** 安装 librime
-    #+BEGIN_SRC shell :exports code :results none :tangle no  :eval (or (and (eq m/os 'macos) "yes") "never")
+    #+BEGIN_SRC shell :exports code :results none :tangle no  :eval (or (and (eq m/os 'linux) "yes") "never") :comments link
       cd ~/.emacs.d/3rdparty/librime
       git submodule update --init
       make xcode/thirdparty/boost -j `nproc`
@@ -102,7 +102,7 @@
 
 *** 安装 liberime
 
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (or (and (eq m/os 'macos) "~/.emacs.d/lisp/init-chinese.el") "no") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (or (and (eq m/os 'macos) (m/resolve "${m/home.d}/.emacs.d/lisp/init-chinese.el")) "no") :comments link
       (use-package liberime
 	:if (eq m/os 'macos)
 	:load-path m/load-path
@@ -127,7 +127,7 @@
 						    (setq pyim-default-scheme 'rime-quanpin)))))))
     #+END_SRC
 
-    #+BEGIN_SRC yaml :tangle "~/.emacs.d/rime/default.custom.yaml" :noweb yes :eval never :exports code
+    #+BEGIN_SRC yaml :tangle (m/resolve "${m/home.d}/.emacs.d/rime/default.custom.yaml") :noweb yes :eval never :exports code
 	patch:
 	  menu/page_size: 100
 	  speller/auto_select: false
