--- a/hammers/tmux/tmux.org
+++ b/hammers/tmux/tmux.org
@@ -9,7 +9,7 @@
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 *** tmux 配置
-    #+BEGIN_SRC conf :tangle "~/.tmux.conf" :results silent :comments link
+    #+BEGIN_SRC conf :tangle (m/resolve "${m/home.d}/.tmux.conf") :results silent :comments link
       # use ctrl-a to as prefix
       set -g prefix C-x
       unbind-key C-b
